Beefed up the homepage.  C and the beach closures web pages

--- a/index.html
+++ b/index.html
@@ -9,41 +9,22 @@
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.1/cerulean/bootstrap.min.css" rel="stylesheet">
-        <link href="webpage/openwater.css" rel="stylesheet">
+        <link href="webpage/css/openwater.css" rel="stylesheet">
 
     </head>
     <body>
 
         <style>
-
-            .jumbotron {
-                background-image:url("webpage/skyline_water.jpeg");
-                background-size:cover;
-                height:500px;
-                color: white;
+            .jumbotron{
+                background-image:url("webpage/img/skyline_water.jpeg");
             }
-
-            #jumboText {
-                position: relative;
-                top: 250px;
-                color:white;
-            }
-
-            #jumboText h2 {
-                color: white;
-            }
-
-            .centerThis {
-                text-align: center;
-            }
-
         </style>
 
         <div class="jumbotron" id="heroImage">
             <div id="jumboText">
                 <div class="container">
                     <div class="col-xs-12 col-sm-offset-2">
-                        <h2>Open Waters Chicago</h2>
+                        <h1>Open Waters Chicago</h1>
                         <p>A data-driven conversation about Chicago's water resources</p>
                     </div>
                 </div>
@@ -53,25 +34,63 @@
         </div>
 
         <div class="container">
-            <h2 class="centerThis">
-                Learn more<br>
-            </h2>
-            <div class="col-sm-4">
-                Test
-            </div>
-            <div class="col-sm-4">
-                Test
-            </div>
-            <div class="col-sm-4">
-                Test
-            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <h2 class="centerThis">Lake Michigan</h2>
+                    <img src="webpage/img/zoomChicago.jpg" class="img-responsive">
+                    <h4 class="centerThis">
+                        In a world and country of water scarcity, Chicago is fortunate to
+                        set at the shores of almost 20% of the world's surface freshwater.<br>
+                    </h4><br>
+                    <a href="/beachHealth/index.html">
+                        <button type="button" class="btn btn-primary center-block">Find Out More</button>
+                    </a>
+                    <h4 class="centerThis">
+                        <strong>Abundance leads to compacency</strong>
+                    </h4>
 
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <h2 class="centerThis">The Chicago River</h2><br>
+                    <img src="webpage/img/LaSalle_Street_bridge_20100731.jpg" class="img-responsive">
+                    <h4 class="centerThis">
+                        Chicago was founded on the banks of a stream by residents with big
+                        visions for what would soon become the Chicago River.  In 1900,
+                        engineers redirected it, and today we live with both the advantages
+                        and the adverse effects.<br>
+                    </h4>
+                    <h4 class="centerThis">
+                        <strong>Our discharge travels the Mississippi River, waters
+                            our food, and goes into the Gulf of Mexico</strong>
+                    </h4>
+
+                </div>
+                <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-0">
+                    <h2 class="centerThis">Rainfall</h2>
+                    <img src="webpage/img/greenRoof.jpg" class="img-responsive">
+                    <h4 class="centerThis">
+                        This Chicago Climate Action plan says that scientists expect rain
+                        events with higher intensity over shorter periods of time.
+                    </h4>
+                    <h4 class="centerThis">
+                        <strong>Can our infrastructure handle this?</strong>
+                    </h4>
+
+                </div>
+            </div>
         </div>
 
-        <hr>
+        <div class="blueBackground">
+            <h2 class="centerThis" style="padding:30px;">
+                Open Waters Chicago is a community of residents who are interested in
+                telling the story of our local water environment using data.
+            </h2>
+        </div>
         <h3 class="centerThis">
-            Open Waters Chicago is a community of residents who are interested in
-            telling the story of our local water environment using data.
+            Join Us<br>
+            Form here.<br>
+            Fork code<br>
+            Contacts<br>
         </h3>
 
 
