Come join us portion of the webpage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.1/cerulean/bootstrap.min.css" rel="stylesheet">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">        
+
         <link href="webpage/css/openwater.css" rel="stylesheet">
 
     </head>
@@ -83,15 +85,50 @@
         <div class="blueBackground">
             <h2 class="centerThis" style="padding:30px;">
                 Open Waters Chicago is a community of residents who are interested in
-                telling the story of our local water environment using data.
+                telling the story of our local water environment using data.<br><br>
+                Open Waters Chicago is open-sourced on
+                <a href="http://github.com/open-city/water" style="color:orange;" target="_blank">
+                    GitHub. <i class="fa fa-github-alt"></i>
+                </a>
+
+
+                <br>
+                Become a contributor!
             </h2>
         </div>
-        <h3 class="centerThis">
-            Join Us<br>
-            Form here.<br>
-            Fork code<br>
+        <div class="container">
+            <div class="col-sm-offset-2">
+                <h1><strong>Join Us</strong></h1>
+                <h4>We meet every Tuesday evening at
+                    <a href="http://opengovhacknight.org/" style="color:orange;" target="_blank">                  
+                        OpenGov Hack Night.
+                    </a>
+                    Come work with us!
+                </h4>            
+            </div>
+            <br>
+
+            <form>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-sm-4" style="text-align:right;">
+                            <label for="emailInput">Email address</label>
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="email" class="form-control" id="emailInput" placeholder="Join our e-mail list.  No spam here.">
+                        </div>
+                        <div class="col-sm-4">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+
+
+                </div>
+
+            </form>
+
             Contacts<br>
-        </h3>
+        </div>
 
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
