--- a/beachHealth/index.html
+++ b/beachHealth/index.html
@@ -5,7 +5,7 @@
         <title>Beach Closings</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
         <link href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.1/cerulean/bootstrap.min.css" rel="stylesheet">
-        
+
         <link href="../webpage/css/openwater.css" rel="stylesheet">
 
     </head>
@@ -16,7 +16,7 @@
                 background-image:url("../webpage/img/chicagoBeach.jpeg");
                 margin-bottom: 0px;
             }
-            
+
             #beachChart {
                 margin-top:30px;
             }
@@ -47,14 +47,21 @@
 
         </div>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+
         <div class="container">
-            <div class id="beachChart">
+
+            <div ng-app="beachClosingsApp">
+                <div ng-controller="beachController">
+                    <div class="row">
+                        <button type="button" ng-click="addSeries()" class="btn btn-primary">Primary</button>
+                    </div>
+                    <div class="row">
+                        <highchart id="chart1" config="highchartsNG"></highchart>
+                    </div>
+                </div>
             </div>
-            <p class="centerThis" style="color:#C0C0C0;">Source: Twitter</p>
-            <br>
-            <a href="#">
-                <h1 class="centerThis">What beaches do you go to?</h1>
-            </a>
+
         </div>
         <hr>
         <div class="container">
@@ -73,7 +80,8 @@
 
         <script src="http://code.highcharts.com/highcharts.js"></script>
         <script src="http://code.highcharts.com/modules/data.js"></script>
-        <script src="../webpage/js/closingsChart.js"></script>
+        <script src="https://rawgit.com/pablojim/highcharts-ng/master/dist/highcharts-ng.js"></script>
+        <script src="../webpage/js/closingsChart2.js"></script>
 
 
         <script>
