A few minor cleanups for the beach closings page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         In a world and country of water scarcity, Chicago is fortunate to
                         set at the shores of almost 20% of the world's surface freshwater.<br>
                     </h4><br>
-                    <a href="/beachHealth/index.html">
+                    <a href="/beachHealth/beachClosings.html">
                         <button type="button" class="btn btn-primary center-block">Find Out More</button>
                     </a>
                     <h4 class="centerThis">
